# bsdev

./: .brownserve_repository_manifest  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.build/: build.ps1
.build/tasks/: build_tasks.ps1
.build/tests/: Basic.Binary.Tests.ps1
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: builds.yaml  release.yaml  stage-release.yaml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  update.rs
core/: Cargo.toml
core/src/: adbtunnel.rs  codebridge.rs  config.rs  docker.rs  error.rs  forward.rs  lib.rs  process.rs  settings.rs  ssh.rs  tunnel.rs
image/: Dockerfile  bsdev-entrypoint.sh  code  fish-android-path.fish  fish-cargo-path.fish
scripts/: install.ps1  install.sh
