[package]
name = "bsdev"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bsdev"
path = "src/main.rs"

[dependencies]
bsdev-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
self_update = { version = "0.44.0", default-features = false, features = ["ureq", "rustls", "compression-flate2", "compression-zip-deflate"] }

[dev-dependencies]
tempfile = "3"
